--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>My Portfolio</title>
+        <title>Tyler Bergstrom</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -29,7 +29,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">My Portfolio</a>
+          <a class="navbar-brand" href="#">Tyler Bergstrom</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <div class="container">
-        <h1 class="text-center mt-5 mb-4">My Work Portfolio</h1>
+        <h1 class="text-center mt-5 mb-4">Technical Writing Portfolio</h1>
         <div class="row">
             <div class="col-lg-4 col-md-6 mx-auto">
                 <div class="card mb-5">
